--- a/css/main.css
+++ b/css/main.css
@@ -1,123 +1,99 @@
-.header {
-  padding-top: 1.9rem;
-  padding-left: 3rem;
-  padding-right: 4rem;
-  display: block;
-  padding-bottom: 1.3rem;
-
-  justify-content: space-between;
-}
-
-/* Toggle menu icon */
-.side-menu:checked ~ nav {
-  max-height: 100%;
-}
-.side-menu:checked ~ .hamb .hamb-line {
-  background: transparent;
-}
-.side-menu:checked ~ .hamb .hamb-line::before {
-  transform: rotate(-45deg);
-  top: 0;
-}
-.side-menu:checked ~ .hamb .hamb-line::after {
-  transform: rotate(45deg);
-  top: 0;
-}
-/**/
-
-/* Menu Icon */
-
-.hamb {
-  cursor: pointer;
-  float: right;
-  padding: 0.6rem 0 2rem 0;
-} /* Style label tag */
-
-.hamb-line {
-  background: var(--primary-color);
-  display: block;
-  height: 2px;
-  position: relative;
-  width: 24px;
-} /* Style span tag */
-
-.hamb-line::before,
-.hamb-line::after {
-  background: var(--primary-color);
-  content: "";
-  display: block;
-  height: 100%;
-  position: absolute;
-  transition: all 0.2s ease-out;
-  width: 100%;
-}
-.hamb-line::before {
-  top: 5px;
-}
-.hamb-line::after {
-  top: -5px;
-}
-
-.side-menu {
-  display: none;
-} /* Hide checkbox */
-
-/*-*/
-
-.header__logo {
-  font-weight: 500;
-  font-size: 2rem;
-  padding-left: 0.7rem;
-  letter-spacing: 0.2rem;
-  color: #444;
-  display: inline-block;
-}
-.header__left-menu {
+.navbar {
   display: flex;
   align-items: center;
-  gap: 0.5rem;
-}
-
-.nav {
-  width: 80%;
-  height: 100%;
-  position: fixed;
-  overflow: hidden;
-  background-color: #444;
-}
-
-.nav {
-  max-height: 0;
-  transition: max-height 0.5s ease-out;
-}
-
-.nav__list {
-  list-style: none;
-  padding: 0.9rem 0 0 0;
-  text-transform: capitalize;
-  font-size: 1.4rem;
-  border: none;
-  color: red;
-  border-radius: 15px;
-  font-weight: 500;
-  /*display: none;*/
-}
-
-.nav__item {
-  padding: 1rem;
-  margin-bottom: 2rem;
-}
-.nav__link {
-  padding-left: 3rem;
-  padding-top: 4rem;
-  font-size: 1.5rem;
-  font-weight: 500;
-  text-decoration: none;
-  color: var(--primary-color);
-}
-.header__icon-left {
-  display: flex;
   justify-content: space-evenly;
+}
+.nav-links a {
+  color: #fff;
+}
+
+/* LOGO */
+
+.logo {
+  font-size: 32px;
+}
+
+/* NAVBAR MENU */
+
+.menu {
+  display: flex;
+
+  gap: 1em;
+
+  font-size: 18px;
+}
+.test {
+  display: flex;
+  gap: 2rem;
+}
+.menu li:hover {
+  background-color: #4c9e9e;
+
+  border-radius: 5px;
+
+  transition: 0.3s ease;
+}
+
+.menu li {
+  padding: 5px 14px;
+}
+
+/* DROPDOWN MENU */
+
+.services {
+  position: relative;
+}
+
+.dropdown {
+  background-color: rgb(1, 139, 139);
+
+  padding: 1em 0;
+
+  position: absolute; /*WITH RESPECT TO PARENT*/
+
+  display: none;
+
+  border-radius: 8px;
+
+  top: 35px;
+}
+
+.dropdown li + li {
+  margin-top: 10px;
+}
+
+.dropdown li {
+  padding: 0.5em 1em;
+
+  width: 8em;
+
+  text-align: center;
+}
+
+.dropdown li:hover {
+  background-color: #4c9e9e;
+}
+
+.services:hover .dropdown {
+  display: block;
+}
+
+/*RESPONSIVE NAVBAR MENU STARTS*/
+
+/* CHECKBOX HACK */
+
+input[type="checkbox"] {
+  display: none;
+}
+
+/*HAMBURGER MENU*/
+
+.hamburger {
+  display: none;
+
+  font-size: 24px;
+
+  user-select: none;
 }
 
 /*--------------*/
@@ -723,5 +699,58 @@
     display: grid;
     align-items: baseline;
     grid-template-columns: repeat(4, 1fr);
+  }
+}
+/**/
+
+/* APPLYING MEDIA QUERIES */
+
+@media (max-width: 768px) {
+  .menu {
+    display: none;
+
+    position: absolute;
+
+    background-color: teal;
+
+    right: 0;
+
+    left: 0;
+
+    text-align: center;
+
+    padding: 16px 0;
+  }
+
+  .menu li:hover {
+    display: inline-block;
+
+    background-color: #4c9e9e;
+
+    transition: 0.3s ease;
+  }
+
+  .menu li + li {
+    margin-top: 12px;
+  }
+
+  input[type="checkbox"]:checked ~ .menu {
+    display: block;
+  }
+
+  .hamburger {
+    display: block;
+  }
+
+  .dropdown {
+    left: 50%;
+
+    top: 30px;
+
+    transform: translateX(35%);
+  }
+
+  .dropdown li:hover {
+    background-color: #4c9e9e;
   }
 }
